2009-04-07  Ben Abbott <bpabbott@mac.com>

	* plot/Makefile.in: Remove __gnuplot_default_font__.m from SOURCES.

2009-04-06  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_get_var__.m: Correct misleading error messages, and
	remove dangling/commented code.
	* plot/__gnuplot_default_font__.m: Remove file from archive.
	* plot/__go_draw_axes__.m, plot/__go_draw_figure__.m: Allow
	fontsize to be specified for all terminals with fontname == "*".

2009-04-06  Jaroslav Hajek <highegg@gmail.com>

	* polynomial/polyscale.m: New function.
	* polynomial/polytrans.m: New function.

2009-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* special-matrix/pascal.m: Fix, optimize & extend.

2009-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/vech.m: Optimize.

2009-04-06  Jaroslav Hajek  <highegg@gmail.com>

	* special-matrix/toeplitz.m: Optimize.

2008-04-03  David Bateman  <dbateman@free.fr>

	* plot/__scatter__.m: correct indexing of cdata.x

2009-04-03  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: New function.
	* optimization/Makefile.in: Update.
	* optimization/__dogleg__: Allow general quadratics.

2009-04-02  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Include gnuplot command termination when
	plotting image.

2009-04-02  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix title placement for gnuplot 4.2.x.

2009-04-02  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Fix test.

2009-03-30  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: New subfunction create_fontspec(). Allow
	fontsize to be specified when the fontname is anonymous.

2009-03-30  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_default_font__.m: New function: determine gnuplot's
	terminal dependent default font.
	* plot/__go_draw_figure__.m: Substitute gnuplot default font when
	"fontname" = "*".

2009-03-29  John W. Eaton  <jwe@octave.org>

	* testfun/Makefile.in (SOURCES): Add rundemos.m to the list.
